# seej

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yaml  unit-tests.yaml
seej/: __init__.py  conditions.py  config.py  navigator.py  see_jsonl.py
seej/plugins/: __init__.py  loader.py
seej/renderers/: __init__.py  base.py  default.py  messages.py  text.py
tests/: samples.jsonl  test_smoke.py
