[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "seej"
version = "0.2.0"
description = "Interactive JSONL browser with rich rendering"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{ name = "Jiaxi Yang", email = "jason.yang98@foxmail.com" }]
dependencies = [
    "rich>=10.0.0",
    "readchar>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
]

[project.scripts]
seej = "seej.see_jsonl:main"

[tool.setuptools.packages.find]
include = ["seej*"]
